--- a/style.css
+++ b/style.css
@@ -12,14 +12,14 @@ body {
 
 .main {
     width: 100%;
-    background-color: #18181b;
+    background-color: #000000;
     
 }
 
 .parent {
     position: relative;
     width: 100%;
-    height: 700vh;
+    height: 500vh;
 }
 
 .sticky-container {
@@ -29,11 +29,127 @@ body {
   width: 100%;
   height: 100vh; 
   z-index: 1;
-  background-color: transparent;
+  background-color: #000000;
 }
 
 canvas {
     width: 100%;
     height: 100vh;
-     display: block;
+     /* display: block; */
 }
+.main2{
+    position: relative;
+}
+.box{
+    
+    /* background-color: #6b6b6b; */
+    width: 20vw;
+    height: 5vh;
+    position: fixed;
+    top: 10%;
+    z-index: 999;
+        color: white;
+         margin-left: 4.8rem;
+}
+.box1{
+    display: flex;
+    flex-direction: column;
+   line-height: 2rem;
+   background-color: #3e3d3d;
+    width: 34vw;
+    height:20vh;
+    position: fixed;
+    padding: 1rem;
+    top: 20%;
+    z-index: 999;
+    margin-left: 4.8rem;
+    color: white;
+    p{
+        font-size: 1.1rem;
+        font-weight: 700;
+    }
+}
+.box2{
+    display: flex;
+    flex-direction: column;
+    margin-left: 4.8rem;
+background-color: #3e3d3d;
+    width: 34vw;
+    
+    height:20vh;
+    position: fixed;
+     padding: 1rem;
+     line-height: 2rem;
+    top: 45%;
+    z-index: 999;
+    color: white;
+      p{
+        font-size: 1.1rem;
+        font-weight: 700;
+    }
+}
+.box3{
+    display: flex;
+    flex-direction: column;
+    margin-left: 4.8rem;
+/* background-color: #3e3d3d; */
+    width: 50vw;
+    
+    height:20vh;
+    position: fixed;
+     padding: 1rem;
+     line-height: 2rem;
+    top: 72%;
+    z-index: 999;
+    color: white;
+      p{
+        font-size: 1.1rem;
+        font-weight: 700;
+    }
+    .view-4 {
+  
+  display: flex;
+  justify-content: center;
+  
+  flex-direction: column;
+ 
+  
+
+  .communitys {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+ 
+    .com1 {
+      width: 5vw;
+      height: 7vh;
+  padding: 5px 5px;
+      background-color: #111111;
+      border-radius: 1vw;
+      border: 1px solid #333;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      /* gap: 1rem; */
+      cursor: pointer;
+
+      .comlogo {
+        width: 5vw;
+        height: 4vh;
+       
+
+        img {
+          object-fit: cover;
+          height: 70%;
+        }
+      }
+      h1 {
+        font-size: 0.5rem;
+      }
+    }
+  }
+}
+}
+
+
+
