--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
     position: relative;
     width: 100%;
     height: 500vh;
+   
 }
 
 .sticky-container {
@@ -40,6 +41,7 @@ canvas {
 .main2{
     position: relative;
 }
+
 .box{
     
     /* background-color: #6b6b6b; */
@@ -91,15 +93,16 @@ background-color: #3e3d3d;
 .box3{
     display: flex;
     flex-direction: column;
-    margin-left: 4.8rem;
-/* background-color: #3e3d3d; */
-    width: 50vw;
-    
-    height:20vh;
+
+  
+    width: 20vw;
+  left: 70%;
+  
+    height:60vh;
     position: fixed;
      padding: 1rem;
      line-height: 2rem;
-    top: 72%;
+    top: 40%;
     z-index: 999;
     color: white;
       p{
@@ -119,15 +122,17 @@ background-color: #3e3d3d;
     display: flex;
     justify-content: space-between;
     align-items: center;
- 
+    flex-direction: column;
+     gap: 2vh;
     .com1 {
-      width: 5vw;
+      width: 13vw;
       height: 7vh;
   padding: 5px 5px;
       background-color: #111111;
       border-radius: 1vw;
       border: 1px solid #333;
       display: flex;
+ 
       justify-content: center;
       align-items: center;
       /* gap: 1rem; */
